# streamweld

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: pipeline_benchmarks.rs
docs/: CONCURRENCY_AND_DISPATCHERS.md
examples/: basic.rs  complex.rs  concurrency_vs_dispatch.rs  concurrent.rs  dispatcher.rs  examples.rs  gen_stage.rs  simple.rs
src/: dispatcher.rs  error.rs  impls.rs  lib.rs  pipeline.rs  pipeline_dispatcher.rs  traits.rs  util.rs
src/core/: error.rs  mod.rs  traits.rs
src/impls/: combinators.rs  consumers.rs  processors.rs  producers.rs
src/pipeline/: dispatcher.rs  mod.rs
src/processors/: combinators.rs  mod.rs
src/sinks/: mod.rs
src/sources/: mod.rs
src/utils/: dispatcher.rs  mod.rs
tests/: integration.rs
